Added introduction post. Delete unused images and update blog title.

--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -11,14 +11,16 @@ const {
 } = Astro.props
 ---
 
-<article class='grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group'>
+<article
+	class='grid grid-rows-[300px_auto] md:grid-rows-[300px_220px] min-h-full group hover:drop-shadow-lg transition-all'
+>
 	<a class='relative overflow-hidden' href={`/post/${slug}/`}>
 		<Image
 			src={heroImage}
 			width={600}
 			height={200}
 			format='webp'
-			class='h-full min-w-full object-cover hover:scale-[101%] transition-all duration-200 rounded-[2px]'
+			class='h-full min-w-full object-cover hover:scale-[101%] transition-all duration-200 rounded-[10px]'
 			alt={`img of ${title}`}
 		/>
 
