--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,19 +6,19 @@ import MenuIcon from './icons/MenuIcon.astro'
 import Search from '@/components/Search'
 import TagIcon from './icons/TagIcon.astro'
 import ToggleTheme from './ToggleTheme.astro'
+import LinkedinIcon from './icons/linkedinNonFilledIcon.astro'
 
 // ADD YOUR SOCIAL NETWORKS HERE
 const SOCIALNETWORKS = [
 	{
-		name: 'Github',
-		url: 'https://github.com/danielcgilibert/blog-template',
-		icon: GithubIcon
+		name: 'LinkedIn',
+		url: 'https://www.linkedin.com/in/gabriel-font%C3%A1n-rodi%C3%B1o-a50968232/',
+		icon: LinkedinIcon
 	},
-
 	{
-		name: 'Twitter',
-		url: 'https://github.com/danielcgilibert/blog-template',
-		icon: TwitterIcon
+		name: 'Github',
+		url: 'https://github.com/BobbyESP/spowlo-blog',
+		icon: GithubIcon
 	}
 ]
 ---
