--- a/src/components/TitlePage.astro
+++ b/src/components/TitlePage.astro
@@ -1,6 +1,6 @@
 ---
 import Title from './Title.astro'
-import Shape from './icons/Shape.astro'
+import SpowloIcon from './icons/SpowloIcon.astro'
 type Props = {
 	title: string
 }
@@ -8,7 +8,7 @@ type Props = {
 const { title } = Astro.props
 ---
 
-<div class='flex justify-start items-center gap-2 title'>
-	<Shape />
+<div class='flex justify-start align-middle items-center gap-2 title'>
+	<SpowloIcon style='background-color: #1DB954; border-radius: 0.250rem' />
 	<Title>{title}</Title>
 </div>
