--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,7 @@ const MAX_POSTS = 5 // max number of posts to show on the home page
 const posts = await getPosts(MAX_POSTS)
 ---
 
-<BaseLayout
-	title="Spowlo blog - What's behind the development"
-	image='public/spowlo-named-urlpreview.webp'
->
+<BaseLayout title='Home'>
 	<TitlePage title='Spowlo blog' />
 	<ListCategories />
 
