Update webpage title in BaseHead component

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,7 +17,7 @@ const socialImageURL = new URL(ogImage ? ogImage : '/spowlo-named-urlpreview.web
 const titleSeparator = '•'
 
 const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`
-const webpageTitle = `${siteConfig.title}`
+const webpageTitle = `${siteConfig.title} - The blog of the preferred songs downloader for Android`
 ---
 
 <!-- ViewTransitions  -->
